--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node backend/app.js",
-    "dev" : "SET NODE_ENV=DEVELOPMENT& nodemon backend/app.js",
-    "prod" : "SET NODE_ENV=PRODUCTION& nodemon backend/app.js"
-
+    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/app.js",
+    "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/app.js",
+    "seeder": "node backend/seeder/seeder.js"
   },
   "keywords": [],
   "author": "",
