--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.507.0",
     "motion": "^12.11.0",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
