--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
