--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
